Handle view MR for phar